# firm-ai

./: .gitignore  README.md  pyproject.toml
src/firm_ai/: __init__.py  __main__.py  azure.py  cli.py  discovery.py  plugin.py
src/firm_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_azure.py  test_cli.py  test_discovery.py  test_plugin.py
